tests/baselines/reference/classExtendsClauseClassNotReferringConstructor.errors.txt
==== tests/cases/compiler/classExtendsClauseClassNotReferringConstructor.ts (1 errors) ====
    class A { a: number; }
    module Foo {
        var A = 1;
        class B extends A { b: string; }
                        ~
!!! error TS2419: Type name 'A' in extends clause does not reference constructor function for 'A'.
    }
    